--- a/html/home-portfolio2.html
+++ b/html/home-portfolio2.html
@@ -19,6 +19,7 @@
             <div class="navigation-menu">
                 <ul>
                     <li class="active"><a class="scroll" href="#home">home</a></li>
+                    <li><a class="scroll" href="#my-skills">skills</a></li>
                     <li><a class="scroll" href="#contact">contact</a></li>
                     </ul>
                 </div>
@@ -32,6 +33,7 @@
     <div id="navigation-menu-mobile">
         <ul>
             <li><a href="#home" class="scroll">home</a></li>
+            <li><a class="scroll" href="#my-skills">skills</a></li>
             <li><a href="#contact" class="scroll">contact</a></li>
             <li><a href="#hire" class="scroll">hire</a></li>
         </ul>
@@ -67,7 +69,53 @@
             </div>
         </section>
 <!--end of about me section-->
-            <div class="parallax1"></div>
+           
+<!-- My Skills Section -->
+
+        <section id="my-skills">
+
+            <div class="my-study">
+                <h1>my study</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Omnis iste veritatis iure odio voluptatem,
+                    necessitatibus optio eum sequi culpa magnam maiores nobis. 
+                    Quas nobis voluptas illum magnam aliquid nesciunt fugit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Omnis iste veritatis iure odio voluptatem,
+                    necessitatibus optio eum sequi culpa magnam maiores nobis. 
+                    Quas nobis voluptas illum magnam aliquid nesciunt fugit.</p>
+            </div>
+
+            <div class="skills-list">
+                <div class="my-skills">
+                    <h1>my<span>skills</span></h1>
+                </div>
+                <p>HTML 5</p>
+                <div class="skill-container">
+                    <div class="html5"></div>
+                </div>
+                <p>CSS 3</p>
+                <div class="skill-container">
+                    <div class="css3"></div>
+                </div>
+                <p>JavaScript</p>
+                <div class="skill-container">
+                    <div class="javascript"></div>
+                </div>
+                <p>Jquery</p>
+                <div class="skill-container">
+                    <div class="jquery"></div>
+                </div>
+                <p>Bootstrap 4</p>
+                <div class="skill-container">
+                    <div class="bootstrap4"></div>
+                </div>
+        </div>
+        </section>
+
+<!-- end of my skills section -->
+
+
 <!--contact section-->
         <section id="contact">
             <h1>contact me through <br> <span>social media</span></h1>
